--- a/index.html
+++ b/index.html
@@ -433,6 +433,11 @@
         <div class="item">
           <!-- FLEX: TITLE + CONTENT -->
           <div class="item-flex-container">
+            <div class="item-content">
+              <figure class="item-image">
+                <img src="img/orich-desktop.png" alt="Orich Trading & Projects logo">
+              </figure>
+            </div>
             <div class="item-header">
               <h3 class="item-title">orich trading & projects</h3>
               <ul class="item-meta-data">
@@ -442,15 +447,11 @@
               </ul>
               <p class="item-description">Small business website homepage</p>
               <div class="item-cta">
-                <a href="https://orichtrading.co.za" target="_blank">view website</a>
-                <a href="https://orichtrading.co.za" target="_blank">view repository</a>
+                <a href="https://orichtrading.co.za" class="cta-primary" target="_blank"><i class="fas fa-caret-right"></i>website</a>
+                <a href="https://shakexsempe.github.io/orich-trading/" class="cta-secondary" target="_blank">view repository</a>
               </div>
             </div>
-            <div class="item-content">
-              <figure class="item-image">
-                <img src="img/orich-min.jpg" alt="Orich Trading & Projects logo">
-              </figure>
-            </div>
+            
           </div>
         </div>
       </div>
