--- a/index.html
+++ b/index.html
@@ -448,7 +448,32 @@
               <p class="item-description">Small business website homepage</p>
               <div class="item-cta">
                 <a href="https://orichtrading.co.za" class="cta-primary" target="_blank"><i class="fas fa-caret-right"></i>website</a>
-                <a href="https://shakexsempe.github.io/orich-trading/" class="cta-secondary" target="_blank">view repository</a>
+                <a href="https://github.com/ShakexSempe/orich-trading" class="cta-secondary" target="_blank">view repository</a>
+              </div>
+            </div>
+            
+          </div>
+        </div>
+        <!-- ITEM -->
+        <div class="item">
+          <!-- FLEX: TITLE + CONTENT -->
+          <div class="item-flex-container">
+            <div class="item-content">
+              <figure class="item-image">
+                <img src="img/hlavutelo-desktop.png" alt="Orich Trading & Projects logo">
+              </figure>
+            </div>
+            <div class="item-header">
+              <h3 class="item-title">hlavutelo Trading & projects&trade;</h3>
+              <ul class="item-meta-data">
+                <li>html</li>
+                <li>sass</li>
+                <li>javascript</li>
+              </ul>
+              <p class="item-description">Small business website homepage</p>
+              <div class="item-cta">
+                <a href="https://hlavutelotrading.co.za" class="cta-primary" target="_blank"><i class="fas fa-caret-right"></i>website</a>
+                <a href="https://github.com/ShakexSempe/hlavutelo" class="cta-secondary" target="_blank">view repository</a>
               </div>
             </div>
             
