work item title fs

--- a/index.html
+++ b/index.html
@@ -444,8 +444,9 @@
                 <li>html</li>
                 <li>sass</li>
                 <li>javascript</li>
+                <li>web hosting</li>
               </ul>
-              <p class="item-description">Small business website homepage</p>
+              <p class="item-description">Small business website homepage.</p>
               <div class="item-cta">
                 <a href="https://orichtrading.co.za" class="cta-primary" target="_blank"><i class="fas fa-caret-right"></i>website</a>
                 <a href="https://github.com/ShakexSempe/orich-trading" class="cta-secondary" target="_blank">view repository</a>
