--- a/index.html
+++ b/index.html
@@ -447,9 +447,9 @@
                 <li>web hosting</li>
               </ul>
               <div class="item-description">
-                <p>
-                  Small business website homepage.
-                </p>
+                <p>fully responsive website</p>
+                <p>direct email and call links</p>
+                <p>web hosting and email accounts</p>
                 </div>
               <div class="item-cta">
                 <a href="https://orichtrading.co.za" class="cta-primary" target="_blank"><i class="fas fa-caret-right"></i>website</a>
