--- a/index.html
+++ b/index.html
@@ -470,12 +470,11 @@
             </div>
             <div class="item-header">
               <h3 class="item-title">hlavutelo Trading & projects&trade;</h3>
-              <ul class="item-meta-data">
-                <li>html</li>
-                <li>sass</li>
-                <li>javascript</li>
-              </ul>
-              <p class="item-description">Small business website homepage</p>
+              <div class="item-description">
+                <p>fully responsive website</p>
+                <p>direct email and call links</p>
+                <p>web hosting and email accounts</p>
+                </div>
               <div class="item-cta">
                 <a href="https://hlavutelotrading.co.za" class="cta-primary" target="_blank"><i class="fas fa-caret-right"></i>website</a>
                 <a href="https://github.com/ShakexSempe/hlavutelo" class="cta-secondary" target="_blank">view repository</a>
