work item title fs

--- a/index.html
+++ b/index.html
@@ -447,8 +447,8 @@
                 <li>web hosting</li>
               </ul>
               <div class="item-description">
-                <p>fully responsive website</p>
-                <p>direct email and call links</p>
+                <p>fully responsive website featuring: </p>
+                <p>direct email and call links,</p>
                 <p>web hosting and email accounts</p>
                 </div>
               <div class="item-cta">
@@ -470,9 +470,15 @@
             </div>
             <div class="item-header">
               <h3 class="item-title">hlavutelo Trading & projects&trade;</h3>
+              <ul class="item-meta-data">
+                <li>html</li>
+                <li>sass</li>
+                <li>javascript</li>
+                <li>web hosting</li>
+              </ul>
               <div class="item-description">
-                <p>fully responsive website</p>
-                <p>direct email and call links</p>
+                <p>fully responsive website featuring: </p>
+                <p>direct email and call links,</p>
                 <p>web hosting and email accounts</p>
                 </div>
               <div class="item-cta">
