--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
       <!-- end of contact form -->
       <!-- padding section -->
       <div id="footer-logo" class="section-pad pad-logo">
-        <figure class="io-item">
+        <figure >
           <a title="shakex sempe: web developer" href="#footer">
             <img src="img/shakex-sempe-logo.png" loading="lazy" alt="Shakex Sempe logo">
           </a>
