--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                 <p>web hosting and email accounts</p>
                 </div>
               <div class="item-cta">
-                <a href="https://orichtrading.co.za" class="cta-primary" target="_blank"><i class="fas fa-caret-right"></i>website</a>
+                <a href="https://orichtrading.co.za" class="cta-primary" target="_blank">website<i class="fas fa-caret-right"></i></a>
                 <a href="https://github.com/ShakexSempe/orich-trading" class="cta-secondary" target="_blank">view repository</a>
               </div>
             </div>
