work cta buttons

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         <h2 data-text="projects" class="section-title io-item io-item">pro<span>j</span>ects</h2>
       </div>
       <div class="work-container">
-        <!-- ITEM -->
+        <!-- ITEM 1 -->
         <div class="item">
           <!-- FLEX: TITLE + CONTENT -->
           <div class="item-flex-container">
@@ -453,13 +453,13 @@
                 </div>
               <div class="item-cta">
                 <a href="https://orichtrading.co.za" class="cta-primary" target="_blank">website<i class="fas fa-caret-right"></i></a>
-                <a href="https://github.com/ShakexSempe/orich-trading" class="cta-secondary" target="_blank">view repository</a>
+                <a href="https://github.com/ShakexSempe/orich-trading" class="cta-secondary" target="_blank">repository<i class="fa-solid fa-code"></i></a>
               </div>
             </div>
             
           </div>
         </div>
-        <!-- ITEM -->
+        <!-- ITEM 2 -->
         <div class="item">
           <!-- FLEX: TITLE + CONTENT -->
           <div class="item-flex-container">
@@ -482,8 +482,8 @@
                 <p>web hosting and email accounts</p>
                 </div>
               <div class="item-cta">
-                <a href="https://hlavutelotrading.co.za" class="cta-primary" target="_blank"><i class="fas fa-caret-right"></i>website</a>
-                <a href="https://github.com/ShakexSempe/hlavutelo" class="cta-secondary" target="_blank">view repository</a>
+                <a href="https://hlavutelotrading.co.za" class="cta-primary" target="_blank">website<i class="fas fa-caret-right"></i></a>
+                <a href="https://github.com/ShakexSempe/hlavutelo" class="cta-secondary" target="_blank">repository<i class="fa-solid fa-code"></i></a>
               </div>
             </div>
             
