--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                 <p>web hosting and email accounts</p>
                 </div>
               <div class="item-cta">
-                <a href="https://orichtrading.co.za" class="cta-primary" target="_blank">website<i class="fas fa-caret-right"></i></a>
+                <a href="https://orichtrading.co.za" class="cta-primary" target="_blank">visit page<i class="fas fa-caret-right"></i></a>
                 <a href="https://github.com/ShakexSempe/orich-trading" class="cta-secondary" target="_blank">repository<i class="fa-solid fa-code"></i></a>
               </div>
             </div>
@@ -482,7 +482,7 @@
                 <p>web hosting and email accounts</p>
                 </div>
               <div class="item-cta">
-                <a href="https://hlavutelotrading.co.za" class="cta-primary" target="_blank">website<i class="fas fa-caret-right"></i></a>
+                <a href="https://hlavutelotrading.co.za" class="cta-primary" target="_blank">visit page<i class="fas fa-caret-right"></i></a>
                 <a href="https://github.com/ShakexSempe/hlavutelo" class="cta-secondary" target="_blank">repository<i class="fa-solid fa-code"></i></a>
               </div>
             </div>
