--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
           <div class="links-container" data-linksContainer>
             <ul class="links">
               <!-- SKILLS LINK -->
-              <li>
+              <!-- <li>
                 <i class="fas fa-lightbulb"></i>
                 <a href="#skills" title="web development skills" data-after="skills"
                   class="scroll-link scroll-li">skills</a>
-              </li>
+              </li> -->
               <!-- WORK[PROJECTS] LINK -->
               <li>
                 <i class="fa-solid fa-earth-africa"></i>
@@ -98,21 +98,21 @@
                 <a href="#contact" title="contact-info" data-after="Contact" class="scroll-link scroll-li">contact</a>
               </li>
               <!-- PROJECTS[PORTFOLIO] LINK -->
-              <li>
+              <!-- <li>
                 <i class="fab fa-github"></i>
                 <a href="#projects" title="github repositories" data-after="portfolio"
                   class="scroll-link scroll-li">portfolio</a>
-              </li>
+              </li> -->
               <!-- SOCIALS -->
               <!-- <li>
                 <i class="fas fa-user-friends"></i>
                 <a href="#footer" title="social-links" data-after="Socials" class="scroll-link scroll-li">socials</a>
               </li> -->
               <!-- FORM -->
-              <li>
+              <!-- <li>
                 <i class="fas fa-at"></i>
                 <a href="forms/form.html" title="contact-form" data-after="form" class="scroll-li">form</a>
-              </li>
+              </li> -->
 
             </ul>
             <div class="contact-links">
@@ -643,7 +643,7 @@
           <div class="contact-info">
             <h4>Email address</h4>
             <p>bshakex@gmail.com</p>
-            <a href="mailto:bshakex@gmail.com" title="Send email to Shakex">send email<i class="fas fa-at"></i>
+            <a href="mailto:bshakex@gmail.com" title="Email me">send email<i class="fas fa-at"></i>
               </a>
           </div>
         </article>
@@ -658,7 +658,7 @@
           <div id="whatsapp" class="contact-info">
             <h4>whatsApp contact</h4>
             <p>+27716876941</p>
-            <a href="https://wa.me/+27716876941" target="_blank" title="WhatsApp Shakex">send text<i class="fa-solid fa-comment-dots"></i></a>
+            <a href="https://wa.me/+27716876941" target="_blank" title="WhatsApp text me">send text<i class="fa-solid fa-comment-dots"></i></a>
           </div>
         </article>
         <!-- PHONE NUMBER -->
@@ -672,7 +672,7 @@
           <div id="phone" class="contact-info">
             <h4>phone number</h4>
             <p>+27 72 600 5104</p>
-            <a href="tel:+27726005104" title="Call Shakex">call now<i class="fas fa-phone-volume"></i></a>
+            <a href="tel:+27726005104" title="Call me">call now<i class="fas fa-phone-volume"></i></a>
           </div>
         </article>
       </div>
