work item title

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
@@ -467,16 +467,13 @@
             </div>
             <div class="item-header">
               <h3 class="item-title">hlavutelo Trading & projects&trade;</h3>
-              <ul class="item-meta-data">
-                <li>html</li>
-                <li>sass</li>
-                <li>javascript</li>
-                <li>web hosting</li>
-              </ul>
+              <div class="item-meta-data">
+                <p>freelance project</p>
+              </div>
               <div class="item-description">
-                <p>fully responsive website featuring: </p>
-                <p>direct email and call links,</p>
-                <p>web hosting and email accounts</p>
+                <p>fully responsive website featuring: <br>
+                  Direct email and call links. <br>
+                  Web hosting and email accounts</p>
                 </div>
               <div class="item-cta">
                 <a href="https://hlavutelotrading.co.za" class="cta-primary" target="_blank">visit page<i class="fas fa-caret-right"></i></a>
