test: 2nd item meta title

--- a/index.html
+++ b/index.html
@@ -467,9 +467,11 @@
             </div>
             <div class="item-header">
               <h3 class="item-title">hlavutelo Trading & projects&trade;</h3>
-              <div class="item-meta-data">
-                <p>freelance project</p>
-              </div>
+              <ul class="item-meta-data">
+                <li>design</li>
+                <li>development</li>
+                <li>web hosting</li>
+              </ul>
               <div class="item-description">
                 <p>fully responsive website featuring: <br>
                   Direct email and call links. <br>
