request cv about aricle

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </p>
           </article>
           <div class="skills-drop">
-            <p class="skills-drop-p">View my full Web Development skill set in the dropdown section below.</p>
+            <p class="skills-drop-p">View my full Web Development skill set in the dropdown section below</p>
           </div>
         </div>
         <!--Dropdown-->
@@ -557,6 +557,7 @@
           <article class="about-article">
             <p class="io-item io-item" id="intro">Boitumelo 'Shakex' Sempe is a South Africa based International Relations graduate and freelance Front-End Web
               Developer specializing in User Interface and User Experience.
+              <a href="mailto:bshakex@gmail.com?subject=CV Request" class="cv">Request CV</a>
             </p>
             <p class="about-body io-item io-item">
               <i class="fa-brands fa-free-code-camp"></i>
