--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
       </div>
       <div class="work-container">
         <!-- ITEM 1 -->
-        <div class="item">
+        <div class="item io-item">
           <!-- FLEX: TITLE + CONTENT -->
           <div class="item-flex-container">
             <div class="item-content">
@@ -457,7 +457,7 @@
           </div>
         </div>
         <!-- ITEM 2 -->
-        <div class="item">
+        <div class="item io-item">
           <!-- FLEX: TITLE + CONTENT -->
           <div class="item-flex-container">
             <div class="item-content">
