--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                   Web hosting and email accounts</p>
                 </div>
               <div class="item-cta">
-                <a href="https://hlavutelotrading.co.za" class="cta-primary" target="_blank">visit page<i class="fas fa-caret-right"></i></a>
+                <a href="https://shakexsempe.github.io/hlavutelo/" class="cta-primary" target="_blank">visit page<i class="fas fa-caret-right"></i></a>
                 <a href="https://github.com/ShakexSempe/hlavutelo" class="cta-secondary" target="_blank">repository<i class="fa-solid fa-code"></i></a>
               </div>
             </div>
