--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
         <div class="article-container">
           <article class="about-article">
             <p class="io-item io-item" id="intro">Boitumelo 'Shakex' Sempe is a South Africa based International Relations graduate and freelance Front-End Web
-              Developer specializing in User Interface and User Experience.
+              Developer specializing in Responsive Web Design and User Experience.
               <a href="mailto:bshakex@gmail.com?subject=CV Request" class="cv">Request CV</a>
             </p>
             <p class="about-body io-item io-item">
