--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
@@ -555,64 +555,54 @@
         </div>
         <div class="article-container">
           <article class="about-article">
-            <p class="io-item io-item" id="intro">Boitumelo 'Shakex' Sempe is a South Africa based International Relations graduate and freelance Front-End Web
+            <div class="about-intro io-item">
+            <p class="intro">Boitumelo 'Shakex' Sempe is a South Africa based International Relations graduate and freelance Front-End Web
               Developer specializing in Responsive Web Design and User Experience.
               <a href="mailto:bshakex@gmail.com?subject=CV Request" class="cv">Request CV</a>
             </p>
-            <p class="about-body io-item io-item">
+          </div>
+            <div class="about-body io-item">
+            <p>
               <i class="fa-brands fa-free-code-camp"></i>
               <span class="item io-item-title">FreeCodeCamp</span>
               <a title="Responsive Web Design certificate" href="https://www.freecodecamp.org/certification/boitumelo-sempe/responsive-web-design" target="_blank">Responsive Web Design.</a>
             </p>
-            <p class="about-body io-item io-item">
+            <p>
               <i class="fa-solid fa-user-graduate"></i>
               <span class="item io-item-title">University of pretoria</span>
               <a href="https://www.up.ac.za/" target="_blank">Bachelors degree (Bpolsci)</a>
             </p>
-            <p class="about-body io-item io-item">
+            <p>
               <i class="fa-solid fa-graduation-cap"></i>
               <span class="item io-item-title">International School of South Africa</span>
               <a href="https://www.issa.co.za/" target="_blank">Cambridge International AS and A Levels</a>
             </p>
-            <p class="about-body io-item io-item">
+            <p>
               <i class="fa-solid fa-headset"></i>
               <span class="item io-item-title">Compensation Fund - Dept of Labour</span>
               <a href="https://www.labour.gov.za/Contacts/Pages/Contacts-CF.aspx" target="_blank">Customer Care Agent</a>
             </p>
 
-            <p class="about-body io-item io-item" id="about-body">
+            <p>
               <!-- <i class="fa-solid fa-code"></i> -->
               <i class="fab fa-html5"></i>
               I use <a href="https://html.com/semantic-markup/" target="_blank">HTML-5 Semantic Markup</a> to code accessible and responsive web pages. 
               Additionally, I implement On-Page Search Engine Optimization techniques.
             </p>
-            <p class="about-body io-item io-item" id="about-body">
+            <p>
               <i class="fa-brands fa-sass"></i>
               Syntactically Awesome Style Sheets (<a href="https://sass-lang.com/" target="_blank">Sass</a>) is my preferred CSS preprocessor in creating eye-catching& responsive User Interface.
             </p>
-            <p class="about-body io-item io-item" id="about-body">
+            <p>
               <i class="fa-brands fa-js"></i>
               To create dynamic & interactive User Interface I script <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">Javascript</a> algorithms and basic APIs.
             </p>
-            <p class="about-body io-item io-item">
+            <p >
               <i class="fa-brands fa-react"></i>
               I am currently learning the javascript framework <a href="https://reactjs.org/" target="_blank">React</a> to create more complex interactive User Interface.
             </p>
+          </div>
           </article>
-          <!-- <button id="readBtn" title="More About Boitumelo">read more</button> -->
-
-          <!-- <article id="cv">
-            <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" target="_blank" title='Linkedin profile'
-              class="fcc-link">
-              <i class="fab fa-linkedin-in" aria-hidden="true"></i>Linkedin
-            </a>
-            <a href="forms/form.html" title="Request CV" class="fcc-link">
-              <i class="fas fa-user-graduate"></i>request cv
-            </a>
-            <a href="https://github.com/ShakexSempe" title="Github" target="_blank" id="profile-link">
-              <i class="fab fa-github"></i>github
-            </a>
-          </article> -->
         </div>
       </div>
       <div class="col-left">
