hero and skills fs clamp test

--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
     <div class="hero">
       <div id="hero-content">
         <div class="hero-title">
-          <p><a href="#main">Front-end web developer</a></p>
-          <h1>
+          <h1><a href="#main">Front-end web developer</a></h1>
+          <p>
             my name is<br>boitumelo sempe
-          </h1>
+          </p>
           <p id="aka">a.k.a</p>
         </div>
-        <a href="#main" type="button" title="Shakex Sempe: Web Developer" id="cta-header" class="scroll-link">
+        <a href="#main" type="button" title="Main Content" id="cta-header" class="scroll-link">
           <span style="--i:1;">S</span>
           <span style="--i:2;">h</span>
           <span style="--i:3;">a</span>
