--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
     <div class="hero">
       <div id="hero-content">
         <div class="hero-title">
-          <h1><a href="#main">Front-end web developer</a></h1>
-          <p>
+          <h1 class="hero-title-header"><a href="#main">Front-end web developer</a></h1>
+          <p class="hero-description">
             my name is<br>boitumelo sempe
           </p>
-          <p id="aka">a.k.a</p>
+          <p class="hero-meta-description" id="aka">a.k.a</p>
         </div>
-        <a href="#main" type="button" title="Main Content" id="cta-header" class="scroll-link">
+        <a href="#main" class="scroll-link hero-cta" type="button" title="Main Content" id="cta-header">
           <span style="--i:1;">S</span>
           <span style="--i:2;">h</span>
           <span style="--i:3;">a</span>
@@ -156,7 +156,6 @@
           <span style="--i:6;">x</span>
         </a>
       </div>
-      
     </div>
   </section>
   <!-- END OF HERO-->
