--- a/index.html
+++ b/index.html
@@ -774,9 +774,7 @@
       <!-- padding section -->
       <div id="footer-logo" class="section-pad pad-logo">
         <figure >
-          <a title="shakex sempe: web developer" href="#footer">
-            <img src="img/shakex-sempe-logo.png" loading="lazy" alt="Shakex Sempe logo">
-          </a>
+          <img src="img/shakex-sempe-logo.png" loading="lazy" alt="Shakex Sempe Web Developer logo">
         </figure>
       </div>
       <div data-scroll class="bs21">
