--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
         <div class="article-container">
           <article class="about-article">
             <div class="about-intro io-item">
-            <p class="intro">Boitumelo 'Shakex' Sempe is a South Africa based International Relations graduate and freelance Front-End Web
+            <p class="intro">Boitumelo 'Shakex' Sempe is a South Africa based International Relations graduate and Front-End Web
               Developer specializing in Responsive Web Design and User Experience.
               <a href="mailto:bshakex@gmail.com?subject=CV Request" class="cv">Request CV</a>
             </p>
