--- a/index.html
+++ b/index.html
@@ -621,7 +621,8 @@
     <div class="contact container">
       <div class="contact-header">
         <!-- <h2 title="contact information" data-text="contactinfo" class="section-title io-item io-item">Contact<span>Info</span></h2> -->
-        <h2 title="contact information" data-text="contactinfo" class="section-title io-item io-item">Contact<span>Info</span></h2>
+        <h2 title="contact information" data-text="contactinfo" class="section-title io-item io-item">
+          Contact<span>Info</span></h2>
       </div>
       <div class="contact-items">
         <!-- EMAIL ITEM -->
@@ -629,37 +630,38 @@
           <div class="title">
             <h3>Email</h3>
             <div class="icon">
-            <i class="fas fa-envelope"></i></div>
+              <i class="fas fa-envelope"></i></div>
           </div>
           <div class="contact-info">
             <h4>Email address</h4>
             <p>bshakex@gmail.com</p>
             <a href="mailto:bshakex@gmail.com" title="Email me">send email<i class="fas fa-at"></i>
-              </a>
+            </a>
           </div>
         </article>
         <!-- WHATSAPP NUMBER -->
         <article title="WhatsApp Number" class="contact-item io-item">
           <div class="title">
             <h3>WhatsApp</h3>
-          <div class="icon">
-            <i class="fa-brands fa-whatsapp"></i>
+            <div class="icon">
+              <i class="fa-brands fa-whatsapp"></i>
+            </div>
           </div>
-        </div>
           <div id="whatsapp" class="contact-info">
             <h4>whatsApp contact</h4>
             <p>+27716876941</p>
-            <a href="https://wa.me/+27716876941" target="_blank" title="WhatsApp text me">send text<i class="fa-solid fa-comment-dots"></i></a>
+            <a href="https://wa.me/+27716876941" target="_blank" title="WhatsApp text me">send text<i
+                class="fa-solid fa-comment-dots"></i></a>
           </div>
         </article>
         <!-- PHONE NUMBER -->
         <article title="Phone Number" class="contact-item io-item">
           <div class="title">
             <h3>Phone</h3>
-          <div class="icon">
-            <i class="fas fa-phone-alt"></i>
+            <div class="icon">
+              <i class="fas fa-phone-alt"></i>
+            </div>
           </div>
-        </div>
           <div id="phone" class="contact-info">
             <h4>phone number</h4>
             <p>+27 72 600 5104</p>
@@ -670,123 +672,147 @@
     </div>
     <!-- end of padding section -->
   </section>
-    <!--PROJECTS SECTION-->
-    <section class="link-section" id="projects">
-      <div class="projects-header">
-        <h2 title="repository links" data-text="portfolio" id="projects-h1" class="section-title io-item io-item">Port<span>f</span>olio
-        </h2>
+  <!--PROJECTS SECTION-->
+  <section class="link-section" id="projects">
+    <div class="projects-header">
+      <h2 title="repository links" data-text="portfolio" id="projects-h1" class="section-title io-item io-item">
+        Port<span>f</span>olio
+      </h2>
+    </div>
+    <div class="projects container">
+      <div data-scroll class="all-projects">
+        <!-- /PROJECTS.JS -->
       </div>
-      <div class="projects container">
-        <div data-scroll class="all-projects">
-          <!-- /PROJECTS.JS -->
-        </div>
-      </div>
-    </section>
-  
+    </div>
+  </section>
+
   <!-- FOOTER -->
   <section class="link-section" id="footer">
-    <div class="footer container">
+    <div class="footer ">
+      <!-- TOP FOOTER -->
+      <div class="footer-top">
+        <!-- SOCIAL MEDIA LINKS -->
+        <div class="socialMedia-links">
+          <h2 data-scroll title="social media links" class="footer-section-title">my links</h2>
+          <div class="links-grid">
+            <!-- LINKEDIN -->
+            <div class="socialMedia-item io-item linkedin">
+              <!-- <i class="fas fa-link link-icon"></i> -->
+              <p class="link-icon">linkedin</p>
+              <i class="fab fa-linkedin-in bg-i"></i>
+              <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title="linkedin" data-icon="linkedin"
+                target="_blank">
+                <i class="fab fa-linkedin-in"></i>boitumelo Sempe
+              </a>
+            </div>
+            <!-- GIT-HUB -->
+            <div class="socialMedia-item io-item github">
+              <i class="fab fa-github bg-i"></i>
+              <p class="link-icon">github</p>
+              <a href="https://github.com/ShakexSempe" title="github" data-icon="github" target="_blank">
+                <i class="fab fa-github"></i>ShakexSempe
+              </a>
+            </div>
+            <!-- CODE-PEN-->
+            <div class="socialMedia-item io-item codepen">
+              <i class="fab fa-codepen bg-i"></i>
+              <p class="link-icon">codePen</p>
+              <a href="https://codepen.io/bSempe" title="freeCodecamp" data-icon="codepen" target="_blank">
+                <i class="fab fa-codepen"></i>@bsempe
+              </a>
+            </div>
+            <!-- FREE CODE CAMP -->
+            <div class="socialMedia-item io-item fcc">
+              <i class="fab fa-free-code-camp bg-i"></i>
+              <p class="link-icon">freeCodeCamp</p>
+              <a href="https://www.freecodecamp.org/boitumelo-sempe" title="freeCodecamp" data-icon="FCC"
+                target="_blank">
+                <i class="fab fa-free-code-camp"></i>boitumelo sempe
+              </a>
+            </div>
+            <!-- FRONT-END-MENTOR -->
+            <div class="socialMedia-item io-item fem">
+              <i class="fas fa-anchor bg-i"></i>
+              <p class="link-icon">front-end-mentor</p>
+              <a href="https://www.frontendmentor.io/profile/ShakexSempe" title="font-end-mentor" data-icon="FCC"
+                target="_blank">
+                <i class="fas fa-anchor"></i>@ShakexSempe
+              </a>
+            </div>
+            <!-- TWITTER -->
+            <div class="socialMedia-item io-item twitter">
+              <i class="fab fa-twitter bg-i"></i>
+              <p class="link-icon">twitter</p>
+              <a href="https://twitter.com/Shake_x11" title="twitter" data-icon="twitter" target="_blank">
+                <i class="fab fa-twitter"></i>@shake_x11
+              </a>
+            </div>
+          </div>
 
-      <!-- SOCIAL MEDIA LINKS -->
-      <div class="socialMedia-links">
-        <h2 data-scroll title="social media links" class="footer-section-title">my links</h2>
-        <div class="links-grid">
-          <!-- LINKEDIN -->
-          <div class="socialMedia-item io-item linkedin">
-            <!-- <i class="fas fa-link link-icon"></i> -->
-            <p class="link-icon">linkedin</p>
-            <i class="fab fa-linkedin-in bg-i"></i>
-            <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title="linkedin" data-icon="linkedin"
-              target="_blank">
-              <i class="fab fa-linkedin-in"></i>boitumelo Sempe
-            </a>
-          </div>
-          <!-- GIT-HUB -->
-          <div class="socialMedia-item io-item github">
-            <i class="fab fa-github bg-i"></i>
-            <p class="link-icon">github</p>
-            <a href="https://github.com/ShakexSempe" title="github" data-icon="github" target="_blank">
-              <i class="fab fa-github"></i>ShakexSempe
-            </a>
-          </div>
-          <!-- CODE-PEN-->
-          <div class="socialMedia-item io-item codepen">
-            <i class="fab fa-codepen bg-i"></i>
-            <p class="link-icon">codePen</p>
-            <a href="https://codepen.io/bSempe" title="freeCodecamp" data-icon="codepen" target="_blank">
-              <i class="fab fa-codepen"></i>@bsempe
-            </a>
-          </div>
-          <!-- FREE CODE CAMP -->
-          <div class="socialMedia-item io-item fcc">
-            <i class="fab fa-free-code-camp bg-i"></i>
-            <p class="link-icon">freeCodeCamp</p>
-            <a href="https://www.freecodecamp.org/boitumelo-sempe" title="freeCodecamp" data-icon="FCC" target="_blank">
-              <i class="fab fa-free-code-camp"></i>boitumelo sempe
-            </a>
-          </div>
-          <!-- FRONT-END-MENTOR -->
-          <div class="socialMedia-item io-item fem">
-            <i class="fas fa-anchor bg-i"></i>
-            <p class="link-icon">front-end-mentor</p>
-            <a href="https://www.frontendmentor.io/profile/ShakexSempe" title="font-end-mentor" data-icon="FCC"
-              target="_blank">
-              <i class="fas fa-anchor"></i>@ShakexSempe
-            </a>
-          </div>
-          <!-- TWITTER -->
-          <div class="socialMedia-item io-item twitter">
-            <i class="fab fa-twitter bg-i"></i>
-            <p class="link-icon">twitter</p>
-            <a href="https://twitter.com/Shake_x11" title="twitter" data-icon="twitter" target="_blank">
-              <i class="fab fa-twitter"></i>@shake_x11
-            </a>
-          </div>
         </div>
+        <!-- end of social media links -->
+        <!-- contact form -->
+        <form class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com" method="POST">
+          <h2 data-scroll class="footer-section-title contact">Get In Touch</h2>
 
+          <div class="input-div">
+            <label for="name">name :</label>
+            <input type="text" name="Name" id="username" placeholder="name & surname.." required minlength="2">
+          </div>
+
+          <div class="input-div">
+            <label for="email">email :</label>
+            <input type="email" name="Email" id="email" placeholder="your email address.." required>
+          </div>
+
+          <div class="input-div">
+            <label for="message">message :</label>
+            <textarea rows="5" cols="50" minlength="2" name="Message" placeholder="leave a message..." id="message"
+              required></textarea>
+          </div>
+
+          <button type="submit" title="submit contact form">send email</button>
+          <!-- form options -->
+          <input type="hidden" name="_subject" value="New submission!">
+          <input type="hidden" name="_autoresponse" value="Shakex has received your form">
+          <input type="hidden" name="_next" value="https://shakexsempe.netlify.app/thanks.html">
+          <input type="hidden" name="_template" value="table">
+          <input type="text" name="_honey" style="display:none">
+
+        </form>
       </div>
-      <!-- end of social media links -->
-      <!-- contact form -->
-      <form class="contact-form" target="_blank" action="https://formsubmit.co/bshakex@gmail.com" method="POST">
-        <h2 data-scroll class="footer-section-title contact">Get In Touch</h2>
-
-        <div class="input-div">
-          <label for="name">name :</label>
-          <input type="text" name="Name" id="username" placeholder="name & surname.." required minlength="2">
+      <!-- BOTTOM FOOTER -->
+      <div class="footer-bottom">
+        <img src="img/shakex-sempe-logo.png" loading="lazy" alt="Shakex Sempe Web Developer logo">
+        
+        <div class="footer-item">
+          <h3>all rights reserved</h3>
+          <p>copyright&copy; Boitumelo Sempe</p>
+          <p>Mahikeng, South Africa</p>
+          <span class="date"></span>
+        </div>
+        <div class="footer-item">
+          <h3>browse website</h3>
+          <ul class="footer-list browse-list">
+            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#skills">skills</a></li>
+            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#work">work</a></li>
+            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#about">about</a></li>
+            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#projects">portfolio</a></li>
+          </ul>
+        </div>
+        <div class="footer-item">
+          <h3>contact details</h3>
+          <ul class="footer-list contact-list">
+            <li><i class="fas fa-envelope"></i><a href="mailto:bshakex@gmail.com">bshakex@gmail.com</a></li>
+            <li><i class="fas fa-phone"></i><a href="tel:0726005104">072 600 5104</a></li>
+            <li><i class="fab fa-whatsapp"></i><a href="https://wa.me/+27716876941">071 687 6941</a></li>
+            <li><i class="fa-solid fa-location-dot"></i><a>Mahikeng, south africa</a></li>
+          </ul>
         </div>
 
-        <div class="input-div">
-          <label for="email">email :</label>
-          <input type="email" name="Email" id="email" placeholder="your email address.." required>
-        </div>
-
-        <div class="input-div">
-          <label for="message">message :</label>
-          <textarea rows="10" cols="50" minlength="2" name="Message" placeholder="leave a message..." id="message"
-            required></textarea>
-        </div>
-
-        <button type="submit" title="submit contact form">send email</button>
-        <!-- form options -->
-        <input type="hidden" name="_subject" value="New submission!">
-        <input type="hidden" name="_autoresponse" value="Shakex has received your form">
-        <input type="hidden" name="_next" value="https://shakexsempe.netlify.app/thanks.html">
-        <input type="hidden" name="_template" value="table">
-        <input type="text" name="_honey" style="display:none">
-
-      </form>
-      <!-- end of contact form -->
-      <!-- padding section -->
-      <div id="footer-logo" class="section-pad pad-logo">
-        <figure >
-          <img src="img/shakex-sempe-logo.png" loading="lazy" alt="Shakex Sempe Web Developer logo">
-        </figure>
-      </div>
-      <div data-scroll class="bs21">
-        <p>copyright&copy; Boitumelo Sempe</p>
-        <p>Mahikeng, South Africa</p>
-        <a title="Shakex Sempe" href="https://shakexsempe.github.io/box-shadow/" target="_blank">box shadow</a>
-        <span class="date"></span>
+        <!-- <div data-scroll class="bs21">
+          <a title="Shakex Sempe" href="https://shakexsempe.github.io/box-shadow/" target="_blank">box shadow</a>
+        </div> -->
       </div>
     </div>
   </section>
