--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
               required></textarea>
           </div>
 
-          <button type="submit" title="submit contact form">send email</button>
+          <button type="submit" title="submit contact form">submit form<i class="fa-regular fa-share-from-square"></i></button>
           <!-- form options -->
           <input type="hidden" name="_subject" value="New submission!">
           <input type="hidden" name="_autoresponse" value="Shakex has received your form">
