--- a/index.html
+++ b/index.html
@@ -794,6 +794,7 @@
         <div class="footer-item">
           <h3>browse website</h3>
           <ul class="footer-list browse-list">
+            <li><a href="#">home</a></li>
             <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#skills">skills</a></li>
             <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#work">work</a></li>
             <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#about">about</a></li>
@@ -806,7 +807,7 @@
             <li><i class="fas fa-envelope"></i><a href="mailto:bshakex@gmail.com">bshakex@gmail.com</a></li>
             <li><i class="fas fa-phone"></i><a href="tel:0726005104">072 600 5104</a></li>
             <li><i class="fab fa-whatsapp"></i><a href="https://wa.me/+27716876941">071 687 6941</a></li>
-            <li><i class="fa-solid fa-location-dot"></i><a>Mahikeng, south africa</a></li>
+            <li><i class="fa-solid fa-location-dot"></i><a>Mahikeng, South Africa</a></li>
           </ul>
         </div>
 
