--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
           <h3>browse website</h3>
           <ul class="footer-list browse-list">
             <li><a href="#">home</a></li>
-            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#skills">skills</a></li>
+            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="pages/skills.html">skills</a></li>
             <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#work">work</a></li>
             <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#about">about</a></li>
             <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#projects">portfolio</a></li>
