index skills-items

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           <div id="myDropdown" class="dropdown-content">
             <div class="top-btn" id="top-btn"><a href="#work" class="fa-solid fa-circle-xmark"></a></div>
 
-            <div class="skills-bottom">
+            <div class="skills-items">
               
               <div title="HTML5" id="html5" class="skills-item ">
                 <div class="icon">
