--- a/index.html
+++ b/index.html
@@ -130,7 +130,11 @@
     </div>
   </header>
   <!-- END OF HERO-->
-
+<!-- PROGRESS BAR-->
+<div class="progress-container">
+  <div class="progress-bar" id="myBar"></div>
+</div> 
+<!-- END OF PROGRESS BAR-->
   <!--HERO-->
   <section id="home" data-hero class="section welcome-section">
     <div class="hero">
