orich link and loader

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
 <body>
   <!-- LOADER -->
-  <!-- <div class="loader_bg">
+  <div class="loader_bg">
     <div class="spinner">
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div> -->
+  </div>
   <!-- HEADER -->
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
@@ -450,7 +450,7 @@
                   Web hosting and email accounts</p>
                 </div>
               <div class="item-cta">
-                <a href="https://orichtrading.co.za" class="cta-primary" target="_blank">visit page<i class="fas fa-caret-right"></i></a>
+                <a href="https://orich-trading-projects.netlify.app/" class="cta-primary" target="_blank">visit page<i class="fas fa-caret-right"></i></a>
                 <a href="https://github.com/ShakexSempe/orich-trading" class="cta-secondary" target="_blank">repository<i class="fa-solid fa-code"></i></a>
               </div>
               <div class="item-meta-data">
