skills-dropdown btn

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
@@ -165,9 +165,9 @@
     <div class="skills-header">
       <h2 title="skills" data-text="skills" class="section-title io-item io-item">Sk<span>i</span>lls</h2>
     </div>
-    <div class="skills container">
+    <div class="skills">
       <!-- CONTAINER FOR IO TRANSITIONS -->
-      <div class="io-container io-item io-item">
+      <div class="io-container io-item">
         <div class="skills-intro">
           <article class="skills-article">
             <p>
