--- a/index.html
+++ b/index.html
@@ -446,8 +446,8 @@
               
               <div class="item-description">
                 <p>fully responsive website featuring: <br>
-                  Direct email and call links. <br>
-                  Web hosting and email accounts</p>
+                  Direct email & call links. <br>
+                  Web hosting & email accounts</p>
                 </div>
               <div class="item-cta">
                 <a href="https://orich-trading-projects.netlify.app/" class="cta-primary" target="_blank">visit page<i class="fas fa-caret-right"></i></a>
@@ -475,8 +475,8 @@
               <h3 class="item-title">hlavutelo Trading & projects&trade;</h3>
               <div class="item-description">
                 <p>fully responsive website featuring: <br>
-                  Direct email and call links. <br>
-                  Web hosting and email accounts</p>
+                  Direct email & call links. <br>
+                  Web hosting & email accounts</p>
                 </div>
               <div class="item-cta">
                 <a href="https://shakexsempe.github.io/hlavutelo/" class="cta-primary" target="_blank">visit page<i class="fas fa-caret-right"></i></a>
