--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
         </div>
       </nav>
     </div>
+    <!-- PROGRESS BAR-->
+    <div class="progress-container">
+      <div class="progress-bar index-bar" id="myBar"></div>
+    </div> 
   </header>
   <!-- END OF HERO-->
-<!-- PROGRESS BAR-->
-<div class="progress-container">
-  <div class="progress-bar" id="myBar"></div>
-</div> 
 <!-- END OF PROGRESS BAR-->
   <!--HERO-->
   <section id="home" data-hero class="section welcome-section">
