--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
             </p>
             <p>
               <i class="fa-brands fa-sass"></i>
-              Syntactically Awesome Style Sheets (<a href="https://sass-lang.com/" target="_blank">Sass</a>) is my preferred CSS preprocessor in creating eye-catching& responsive User Interface.
+              Syntactically Awesome Style Sheets <br>(<a href="https://sass-lang.com/" target="_blank">Sass</a>) is my preferred CSS preprocessor in creating eye-catching & responsive user interface.
             </p>
             <p>
               <i class="fa-brands fa-js"></i>
@@ -605,7 +605,7 @@
             </p>
             <p >
               <i class="fa-brands fa-react"></i>
-              I am currently learning the javascript framework <a href="https://reactjs.org/" target="_blank">React</a> to create more complex interactive User Interface.
+              I am currently learning the javascript framework <a href="https://reactjs.org/" target="_blank">React</a> to create more complex & interactive interface.
             </p>
           </div>
           </article>
@@ -773,7 +773,7 @@
               required></textarea>
           </div>
 
-          <button type="submit" title="submit contact form">submit form<i class="fa-regular fa-share-from-square"></i></button>
+          <button type="submit" title="submit contact form">submit form<i class="fa-regular fa-envelope-open"></i></button>
           <!-- form options -->
           <input type="hidden" name="_subject" value="New submission!">
           <input type="hidden" name="_autoresponse" value="Shakex has received your form">
