--- a/pages/about.html
+++ b/pages/about.html
@@ -394,7 +394,7 @@
                 </div>
                 <!-- BOTTOM FOOTER -->
                 <div class="footer-bottom">
-                    <img src="img/shakex-sempe-logo.png" loading="lazy" alt="Shakex Sempe Web Developer logo">
+                    <img src="../img/shakex-sempe-logo.png" loading="lazy" alt="Shakex Sempe Web Developer logo">
 
                     <div class="footer-item">
                         <h3>all rights reserved</h3>
@@ -405,12 +405,11 @@
                     <div class="footer-item">
                         <h3>browse website</h3>
                         <ul class="footer-list browse-list">
-                            <li><a href="#">home</a></li>
-                            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="pages/skills.html">skills</a>
+                            <li><a href="../index.html">home</a></li>
+                            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="skills.html">skills</a>
                             </li>
                             <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#work">work</a></li>
-                            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#about">about</a></li>
-                            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#projects">portfolio</a></li>
+                            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="projects.html">portfolio</a></li>
                         </ul>
                     </div>
                     <div class="footer-item">
